--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 
 body {
   font-family: 'Mulish', sans-serif;
+  background: #2a2a2a;
+  color: #fff;
 }
 
 i,
@@ -18,38 +20,31 @@ svg {
   margin: 0 auto;
 }
 
+.clap-pad,
 .kick-pad,
 .snare-pad,
-.hihat-pad {
-  width: 5rem;
-  height: 5rem;
+.tom-pad,
+.hihat-pad,
+.perc-pad,
+.openhat-pad {
+  width: 4rem;
+  height: 4rem;
   margin: 1rem 0.5rem;
+  border-radius: 1rem;
   cursor: pointer;
+  background: #31F5CE;
 }
 
-.kick-pad {
-  background: rgb(160, 211, 224);
+.clap-pad.active,
+.kick-pad.active,
+.snare-pad.active,
+.tom-pad.active,
+.hihat-pad.active,
+.perc-pad.active,
+.openhat-pad.active {
+  background: #FF9ACD;
 }
 
-.snare-pad {
-  background: rgb(200, 160, 224);
-}
-
-.hihat-pad {
-  background: rgb(245, 212, 175);
-}
-
-.kick-pad.active {
-  background: rgb(16, 175, 214);
-}
-
-.snare-pad.active {
-  background: rgb(170, 57, 235);
-}
-
-.hihat-pad.active {
-  background: rgb(238, 147, 43);
-}
 
 .sequencer {
   width: 100%;
@@ -59,19 +54,26 @@ svg {
   justify-content: center;
 }
 
+.clap-track,
 .kick-track,
 .snare-track,
-.hihat-track {
+.tom-track,
+.hihat-track, 
+.perc-track, 
+.openhat-track {
   display: flex;
   align-items: center;
   width: 100%;
   justify-content: space-between;
-  margin-top: 4rem;
 }
 
+.clap,
 .kick,
 .snare,
-.hihat {
+.tom,
+.hihat, 
+.perc, 
+.openhat {
   display: flex;
 }
 
@@ -96,7 +98,7 @@ svg {
 }
 
 .mute.active {
-  background: rgb(182,182,182);
+  color: #FF6767;
 }
 
 .pad {
@@ -109,19 +111,22 @@ svg {
   background-color: #444;
   color: #fff;
   border: none;
-  margin-top: 3rem;
   cursor: pointer;
   border-radius: .5rem;
 }
 
 select {
-  padding: 1rem;
+  padding: 0.5rem;
   margin-left: 1rem;
   font-size: 1rem;
+  background: #444;
+  color: #fff;
+  border-radius: 0.3rem;
+  border: none;
 }
 
 .tempo {
-  margin: 3rem;
+  margin: 3rem 3rem 0;
   width: 50%;
 }
 .tempo-slider {
@@ -149,17 +154,35 @@ select {
   width: 34px;
   height: 25px;
   background: #fff;
-  border: 2.9px solid #ddd;
+  border: 2.9px solid #dadada;
   border-radius: 28px;
   cursor: pointer;
   -webkit-appearance: none;
 }
 
+.tempo-slider::-moz-range-track {
+  background: #444;
+  border: 0;
+  width: 100%;
+  height: 31px;
+  border-radius: 1rem;
+  cursor: pointer;
+}
 
+.tempo-slider::-moz-range-thumb {
+  margin-top: 3.1px;
+  width: 34px;
+  height: 25px;
+  background: #fff;
+  border: 2.9px solid #dadada;
+  border-radius: 28px;
+  cursor: pointer;
+  -webkit-appearance: none;
+}
 
 .tempo p {
   font-size: 1.5rem;
-  margin: 2rem;
+  margin: 1rem 2rem 2rem;
   text-align: center;
 }
 
@@ -168,6 +191,6 @@ select {
     transform: scale(1);
   }
   to {
-    transform: scale(1.2);
+    transform: scale(1.1);
   }
 }
